--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/post.css" />
+    <link rel="stylesheet" href="./styles/menu-responsividade.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
@@ -12,13 +13,21 @@
   </head>
   <body>
     <header>
-      <div><h4>Pokémon TCMG</h4></div>
-      <nav>
-        <ul>
-            <li><a href='#'>Home</a></li>
-            <li><a href="#">Posts</a></li>
-            <li><a href="#">Contato</a></li>
-        <ul>
+      <div class="container"><h4>Pokémon TCMG</h4>
+        <div class="menu-section">
+          <div class="menu-toggle">
+            <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
+          </div>
+          <nav>
+            <ul>
+                <li><a href='#'>Home</a></li>
+                <li><a href="#">Posts</a></li>
+                <li><a href="#">Contato</a></li>
+            <ul>
+        </div>
+      </div>
     </header>
     <section>
       <h1>A Volta dos Mensais em BH</h1>
@@ -290,5 +299,6 @@
       </p>
       <p>Até a próxima!</p>
     </section>
+    <script src="./menu.js"></script>
   </body>
 </html>
