--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
     </header>
     <section>
       <h1>A Volta dos Mensais em BH</h1>
+      <div class="section__info">
+        <div class="section__info_author">
+          <img src="https://avatars.githubusercontent.com/u/50278324?v=4" alt="Wallysson Lima">
+          <a href="#">Wallysson Lima</a>
+        </div>
+          <span>• 09/06/2022</span>
+      </div>
+
+
 
       <p>Fala pessoal,</p>
       <p>
