--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
         </div>
           <span>• 09/06/2022</span>
       </div>
-
-
-
       <p>Fala pessoal,</p>
       <p>
         Estou aqui para contar um pouco da minha jornada no primeiro mensal de
@@ -308,6 +305,9 @@
       </p>
       <p>Até a próxima!</p>
     </section>
+    <footer>
+      Feito com 🤍 por Wallysson
+    </footer>
     <script src="./menu.js"></script>
   </body>
 </html>
