--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <div class="container"><h4>Pokémon TCMG</h4>
+      <div class="container"><img src="./assets/730x513-02.png" alt="Logotipo Pokémon TCMG">
         <div class="menu-section">
           <div class="menu-toggle">
             <div class="one"></div>
