mudando nome do opp

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         alt="Decklist Arceus Inteleon"
       />
       <p>
-        Esse foram as 60 cartas escolhidas. O que mais gostei sinceramente foi o
+        Essas foram as 60 cartas escolhidas. O que mais gostei sinceramente foi o
         2º pingente grande que me fez vencer algumas partidas.
       </p>
 
@@ -232,7 +232,7 @@
       <p>Bom jogo, Marcelão! Foi o melhor que tive no dia, com certeza!</p>
       <strong>3-1-1</strong>
 
-      <h3>Top 8 vs Robert Almeida - Ice Rider</h3>
+      <h3>Top 8 vs Robert Alexander - Ice Rider</h3>
       <p>
         Era o primeiro torneio dele o que já é um mérito absurdo para um jogador
         novato, senti que ele estava um pouco nervoso e talvez isso possa ter
